# telethon_scrapper

./: .env  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  telethon_session.session
src/: main.py
src/api/: main.py
src/core/: bounded_buffer.py  config.py  resource_governor.py  srrapper_config.py  state.py
src/db/: base.py
src/db/mongo/: auth_model.py  message_model.py  models.py  mongo_db.py  settings_model.py
src/models/: message.py
src/schema/: telethon_schema.py
src/services/: auth.py  download.py  gcs_uploader.py  parallel_download.py  telethon.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  main.jsx  styles.css
